# Google_SERP_Scraper

./: .gitignore  bucket.txt  deploy.sh  etl-settings.yaml  flag.UPDATE  main.py  my-sa-Key.json  pubsub_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  shell.txt
schema/: query_details.json  query_results_map.json  yt_channels.json  yt_comments.json  yt_license_details.json  yt_video_metrics.json  yt_video_tags_map.json  yt_videos.json
templates/: index.html
tests/: context.py  test_main.py
